# hermes-plugin-http-backplane

./: .gitignore  README.md  __init__.py  cli.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-parity.md
runtime/: __init__.py  api.py  auth.py  common.py  dispatch.py  http_app.py  integrations_mount.py  server.py
runtime/adapters/: __init__.py  dotenv_local.py  hermes_agent_model.py  hermes_core.py  hermes_model_catalog.py  hermes_provider_env.py
runtime/features/: __init__.py
runtime/features/extension/: __init__.py  attachment_service.py  routes.py
runtime/features/gateway_proxy/: __init__.py  routes.py
runtime/features/hermes_proxy/: __init__.py
runtime/features/hermes_proxy/attachments/: __init__.py  attachment_service.py  routes.py
runtime/features/hermes_proxy/cron/: __init__.py  output_service.py  routes.py  service.py
runtime/features/hermes_proxy/integrations_admin/: __init__.py  routes.py
runtime/features/hermes_proxy/lifecycle/: __init__.py  routes.py  service.py
runtime/features/hermes_proxy/logs/: __init__.py  routes.py  service.py
runtime/features/hermes_proxy/sessions/: __init__.py  routes.py  service.py
runtime/features/hermes_proxy/settings/: __init__.py  config_routes.py  main_provider_settings_service.py  memory_routes.py  memory_service.py  model_catalog_service.py  model_config_service.py  model_routes.py  provider_credentials_service.py  provider_models_service.py  skills_routes.py  skills_service.py
runtime/features/integrations/: __init__.py  loader.py  manager.py  tools.py
runtime/features/integrations/presets/: __init__.py
runtime/features/integrations/presets/lark/: __init__.py  handler.py  integration.yaml  lark_cli.py
skills/: integration-management.md
